--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Chris Miller's 4th Blog
-email: your-email@example.com
+email: chris@rajapet.net
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My personal blog, 4th version
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: anotherlab
