--- a/_config.yml
+++ b/_config.yml
@@ -176,7 +176,8 @@ defaults:
       related: true
   # _pages
   - scope:
-      path: "_pages"
+#      path: "_pages"
+      path: ""
       type: pages
     values:
       layout: single
