--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ comments:
 
 # Build settings
 markdown: kramdown
-remote_theme: mmistakes/minimal-mistakes
+remote_theme: mmistakes/minimal-mistakes@4.24.0
 minimal_mistakes_skin: sunrise
 
 # Outputting
